--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,4 @@ python/peacock/tests/postprocessor_tab/TestPostprocessorPluginManager_test_scrip
 !python/peacock/tests/**/input/*.*
 peacock_tmp_diff.exo
 *.e.diff
+moose
