Add an additional flag for boost dir

--- a/benchmarks/klexpansion/sample/Makefile
+++ b/benchmarks/klexpansion/sample/Makefile
@@ -18,7 +18,7 @@ include $(LIBMESH_DIR)/Make.common
 
 target     := ./sample-$(METHOD)
 
-
+libmesh_CXXFLAGS += -I$(BOOST_DIR)
 ###############################################################################
 # File management.  This is where the source, header, and object files are
 # defined
