--- a/benchmarks/klexpansion/sample/Makefile
+++ b/benchmarks/klexpansion/sample/Makefile
@@ -18,7 +18,9 @@ include $(LIBMESH_DIR)/Make.common
 
 target     := ./sample-$(METHOD)
 
-libmesh_CXXFLAGS += -I$(BOOST_DIR)
+ifneq ($(BOOST_DIR),)
+	libmesh_CXXFLAGS += -I$(BOOST_DIR)
+endif
 ###############################################################################
 # File management.  This is where the source, header, and object files are
 # defined
