--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         shell: bash -l {0}
         run: |
-          mamba install moose-tools moose-libmesh
+          conda install moose-tools moose-libmesh
           conda list | grep moose
 
       - name: Compile RACCOON
