--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -24,12 +24,11 @@ jobs:
         with:
           activate-environment: moose
           channels: conda-forge,https://conda.software.inl.gov/public
-          mamba-version: "*"
 
       - name: Install dependencies
         shell: bash -l {0}
         run: |
-          mamba install moose-tools moose-libmesh lcov
+          conda install moose-tools moose-libmesh lcov
           conda list | grep moose
 
       - name: Compile RACCOON (with coverage)
