--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -22,14 +22,14 @@ jobs:
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
+          mamba-version: "0.22"
           activate-environment: moose
           channels: conda-forge,https://conda.software.inl.gov/public
 
       - name: Install dependencies
         shell: bash -l {0}
         run: |
-          conda install moose-tools moose-libmesh lcov
-          conda list | grep moose
+          mamba install moose-tools moose-libmesh lcov
 
       - name: Compile RACCOON (with coverage)
         if: ${{ github.event_name == 'push' }}
