--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,7 +1,7 @@
 name: Documentation
 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  # Triggers the workflow on push or pull request events
   push:
     branches: [ master ]
   pull_request:
@@ -19,17 +19,16 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Install Conda environment with Micromamba
+        uses: mamba-org/provision-with-micromamba@main
         with:
-          mamba-version: "0.22"
-          activate-environment: moose
+          environment-file: false
+          environment-name: moose
           channels: conda-forge,https://conda.software.inl.gov/public
-
-      - name: Install dependencies
-        shell: bash -l {0}
-        run: |
-          mamba install moose-tools moose-libmesh lcov
+          extra-specs: |
+            moose-tools
+            moose-libmesh
+            lcov
 
       - name: Compile RACCOON (with coverage)
         if: ${{ github.event_name == 'push' }}
