--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,11 @@
 name: Tests
 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  # Triggers the workflow on pushes to the master branch
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ devel ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -17,17 +19,15 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Install Conda environment with Micromamba
+        uses: mamba-org/provision-with-micromamba@main
         with:
-          mamba-version: "0.22"
-          activate-environment: moose
+          environment-file: false
+          environment-name: moose
           channels: conda-forge,https://conda.software.inl.gov/public
-
-      - name: Install dependencies
-        shell: bash -l {0}
-        run: |
-          mamba install moose-tools moose-libmesh
+          extra-specs: |
+            moose-tools
+            moose-libmesh
 
       - name: Compile RACCOON
         shell: bash -l {0}
